# solana-flash-loan

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json
bot/: .env.example  package-lock.json  package.json  run-bot.sh  start.sh
bot/scripts/: inspect-tx.ts  rotate-logs.sh  update-fee.ts
bot/src/: config.ts  index.ts
bot/src/core/: arbitrage-engine.ts  profit-calculator.ts  transaction-builder.ts  triangular-scanner.ts
bot/src/monitoring/: backrun-monitor.ts  new-pool-monitor.ts  pair-scanner.ts
bot/src/providers/: flash-loan-client.ts  jito-client.ts  jupiter-client.ts  multi-dex-client.ts  oracle-client.ts
bot/src/utils/: logger.ts  metrics.ts  rate-limiter.ts  tokens.ts  wallet.ts
programs/solana-flash-loan/: Cargo.toml
programs/solana-flash-loan/src/: constants.rs  errors.rs  events.rs  lib.rs  state.rs
programs/solana-flash-loan/src/instructions/: deposit.rs  flash_loan.rs  initialize_pool.rs  mod.rs  update_pool.rs  withdraw.rs
pybot/: .alt_state.json  alt_manager.py  amm_swap.py  config.py  cross_dex_scanner.py  fee_strategy.py  flash_loan_client.py  jito_client.py  main.py  pool_decoder.py  pool_registry.py  pool_streamer.py  quote_provider.py  requirements.txt  scanner.py  tokens.py  triangular_scanner.py  tx_builder.py  wallet.py
scripts/: close-and-transfer.ts  deploy-devnet.sh  init-devnet-pool.ts  reactivate-pool.ts  withdraw-all.ts
tests/: e2e-flash-loan.ts  solana-flash-loan.ts
