[workspace]
members = [
    "programs/*"
]
resolver = "2"

# Pin blake3 below 1.8 — v1.8+ requires edition2024, incompatible with BPF Cargo 1.75
[workspace.dependencies]
blake3 = ">=0.1, <1.8"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
